--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -1,14 +1,14 @@
 ---
-import "../styles/global.css";
+import '../styles/global.css';
 
 interface Props {
-  title?: string | undefined;
-  description?: string | undefined;
+	title?: string | undefined;
+	description?: string | undefined;
 }
 
 const {
-  title = "Jeffrey de Roode • JDR productions • Freelance Producer Rotterdam",
-  description = "Jeffrey de Roode is a Rotterdam based freelance producer and project manager specialized in film, documentaries and other creative concepts.",
+	title = 'Jeffrey de Roode • JDR productions • Freelance Producer Rotterdam',
+	description = 'Jeffrey de Roode is a Rotterdam based freelance producer and project manager specialized in film, documentaries and other creative concepts.',
 } = Astro.props;
 ---
 
@@ -22,6 +22,6 @@ const {
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link
-  href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;800&display=swap"
-  rel="stylesheet"
+	href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;800&display=swap"
+	rel="stylesheet"
 />
