--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -21,7 +21,7 @@ const { title, description } = Astro.props;
 		<MainHead title={title} description={description} />
 	</head>
 	<body>
-		<div class="overflow-hidden color-scheme-wrapper">
+		<div class="color-scheme-wrapper">
 			<ThemeToggle />
 			<Nav />
 			<main>
