--- a/src/components/ProjectItem.astro
+++ b/src/components/ProjectItem.astro
@@ -29,7 +29,7 @@ const { imgs: images, img_alts: imageAlts, type, title } = entry.data;
 		}
 	</Carousel>
 	<div class="grid gap-0 md:grid-cols-2 px-vw-8 pb-vw-20">
-		<div class="col-start-1 md:col-start-2 md:pl-vw-8 py-vw-4"><Content /></div>
+		<div class="info col-start-1 md:col-start-2 md:pl-vw-8 py-vw-4"><Content /></div>
 	</div>
 </section>
 
