--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,24 +1,24 @@
 /* Global variables */
 :root {
 	/* Colors */
+	--clr-brand: rgb(255, 245, 0);
 	--clr-black: rgb(0, 0, 0);
 	--clr-white: rgb(255, 255, 255);
-	--clr-purple: #53578f;
-	--clr-red: #e8322f;
-	--clr-orange: #f9ae1d;
-	--clr-blue: #7ecaca;
 	--bg: var(--clr-white);
 	--text: var(--clr-black);
 
 	/* Fonts */
 	--font-system: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
 		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	--font-mono: ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono',
+		monospace;
 	--font-body: 'Inter', var(--font-system);
-	--font-brand: 'Inter', var(--font-system);
+	--font-brand: 'Sharpie', var(--font-system);
 
 	--base-size: 1rem;
 
 	/* Text Sizes */
+	--text-xs: 0.675rem;
 	--text-sm: 0.875rem;
 	--text-base: var(--base-size);
 	--text-md: 1.125rem;
@@ -76,6 +76,16 @@
 	-moz-osx-font-smoothing: grayscale;
 	box-sizing: border-box;
 }
+@font-face {
+	font-family: 'Sharpie';
+	src:
+		url('./assets/fonts/sharpie-webfont.woff2') format('woff2'),
+		url('.assets/fonts/sharpie-webfont.woff') format('woff');
+
+	font-weight: normal;
+	font-style: normal;
+}
+
 body,
 html {
 	height: 100%;
@@ -106,6 +116,10 @@ main {
 		color var(--theme-transition),
 		background var(--theme-transition);
 	/* overflow: hidden; */
+}
+
+.info p {
+	margin-bottom: 1rem;
 }
 
 @media (min-width: 768px) {
