--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -39,7 +39,8 @@ const { title, description } = Astro.props;
 			src="https://code.jquery.com/jquery-3.4.1.min.js"
 			integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
 			crossorigin="anonymous"
-		></script>
+		>
+		</script>
 		<!-- <script src="assets/scripts/preloader.js"></script> -->
 
 		<!-- <script src="./assets/scripts/owl.carousel.min.js"></script> -->
