--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -99,14 +99,14 @@ const currentYear = new Date().getFullYear();
 		bottom: 0;
 		left: 0;
 		width: 100%;
-		background: var(--clr-orange);
-		color: var(--clr-black);
+		background: var(--text);
+		color: var(--bg);
 		font-size: 0.875rem;
 		z-index: 0;
 	}
 
 	footer a {
-		color: var(--clr-black);
+		/* color: var(--clr-black); */
 		text-decoration: none;
 		border-bottom: 0.2rem solid rgba(0, 0, 0, 0.4);
 		transition: all 0.3s cubic-bezier(0.16, 1, 0.3, 1);
