--- a/src/components/ProjectList.astro
+++ b/src/components/ProjectList.astro
@@ -4,11 +4,47 @@ import { Debug } from 'astro:components';
 
 const projects = (await getCollection('projects'))
 	.sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf())
-	.slice(0, 4);
+	.slice(0, 666);
 
 import ProjectItem from './ProjectItem.astro';
 ---
 
-<div id="projects" class="w-full z-10 grid grid-cols-2 py-vw-8 gap-y-vw-4">
-	{projects.map((p) => <ProjectItem slug={p.slug} />)}
+<div id="projects" class="z-10 grid projects md:grid-cols-2">
+	{
+		projects.map((p, index) => (
+			<>
+				<ProjectItem slug={p.slug} />
+				{index === 2 && <div class="project__item empty-container">{<div>hoi</div>}</div>}
+			</>
+		))
+	}
 </div>
+
+<style>
+	.projects {
+		background: var(--text);
+		color: var(--text);
+		gap: var(--gapborder);
+		grid-auto-rows: 1fr;
+		margin-block: 0;
+		margin-inline: auto;
+		min-height: 100vh;
+		overflow: hidden;
+		position: relative;
+		transition:
+			color var(--theme-transition),
+			background var(--theme-transition);
+		width: 100%;
+		z-index: 10;
+		border-top: var(--gapborder) solid var(--text);
+	}
+
+	.empty-container {
+		background: brown !important;
+		color: green;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		text-align: center;
+	}
+</style>
