--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -7,18 +7,18 @@ const textLinks: { label: string; href: string }[] = [
 ];
 ---
 
-<nav class="fixed z-50 w-full outer grid grid-cols-2 px-vw-2 py-vw-2">
+<nav class="fixed z-50 grid w-full grid-cols-2 outer overflow-hidden">
 	<div class="left">
-		<h1 class="text-xs">
+		<h1 class="">
 			<a href="#" class="js-anchor-link">Jeffrey de Roode</a>
 		</h1>
 	</div>
 	<div class="flex items-center justify-between right">
-		<div id="date" class="text-xs date">Time</div>
+		<div id="date" class="date">Time</div>
 		<div class="menu pl-vw-8">
 			{
 				textLinks.map((l) => (
-					<a class="text-xs" href={l.href}>
+					<a class="" href={l.href}>
 						{l.label}
 					</a>
 				))
@@ -30,9 +30,21 @@ const textLinks: { label: string; href: string }[] = [
 <style>
 	nav {
 		/* mix-blend-mode: exclusion; */
-		color: var(--text);
 		background: var(--bg);
+		border-bottom: var(--gapborder) solid var(--text);
+		color: var(--text);
 		font-family: var(--font-mono);
+		font-size: var(--text-xs);
+		font-weight: 500;
+		padding: var(--space-xs);
+	}
+	h1 {
+		font-family: var(--font-body);
+		font-weight: 700;
+	}
+
+	.right {
+		padding-left: var(--space-xs);
 	}
 </style>
 
