--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,8 +8,8 @@
 	--text: var(--clr-black);
 
 	/* Fonts */
-	--font-system: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	--font-system: 'Azeret Mono', ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas,
+		'DejaVu Sans Mono', monospace;
 	--font-mono: ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono',
 		monospace;
 	--font-body: 'Inter', var(--font-system);
@@ -100,6 +100,9 @@ html {
 	line-height: 1.5rem;
 	text-rendering: optimizeLegibility;
 	scroll-behavior: smooth;
+	scroll-snap-type: mandatory;
+	scroll-snap-points-y: repeat(3rem);
+	scroll-snap-type: y mandatory;
 }
 main {
 	background: var(--bg);
